src/app/crm/contacts/operations-widget/operations-widget.component.less
:host {
  .operations-widget {
    float: right;
    color: #c5c7ca;
    background: #FFF;
    width: calc(~"100% - 289px");
    padding-right: 65px;
    white-space: nowrap;
  }

  .operations-widget i,
  .operations-widget button {
      color: #677380;
      border-radius: 0;
      margin: 0px;
      box-shadow: none; 
      border-color: #dadee1;
  }

  .operations-widget button:first-child {
      border-top-left-radius: 5px;
      border-bottom-left-radius: 5px;
  }

  .operations-widget button:last-child {
      border-top-right-radius: 5px;
      border-bottom-right-radius: 5px;
  }

  .operations-widget > div {
      display: inline-block;
      margin-right: 10px;
      border-radius: 5px;
  }

  .operations-widget > div > div {
      margin-right: 0;
      display: inline-block;
  }
}

